apps/blog/05_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-about
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/permanent-redirect: https://alchemyof.it/about
spec:
  tls:
  - hosts:
    - blog.ankhmorpork.thaum.xyz
    secretName: ghost-about-tls
  # Those doesn't matter as this Ingress is doing a permanent redirect
  rules:
  - host: blog.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 2368
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
spec:
  tls:
  - hosts:
    - alchemyof.it
    secretName: ghost-tls
  rules:
  - host: alchemyof.it
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 2368
